--- a/Materal.Oscillator.Abstractions/Materal.Oscillator.Abstractions.csproj
+++ b/Materal.Oscillator.Abstractions/Materal.Oscillator.Abstractions.csproj
@@ -10,5 +10,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Materal.Extensions\Materal.Extensions\Materal.Extensions.csproj" />
+	  <ProjectReference Include="..\..\Materal.Utils\Materal.Utils\Materal.Utils.csproj" />
 	</ItemGroup>
 </Project>
