--- a/Materal.Oscillator.Abstractions/Materal.Oscillator.Abstractions.csproj
+++ b/Materal.Oscillator.Abstractions/Materal.Oscillator.Abstractions.csproj
@@ -6,10 +6,11 @@
 		<Description>Materal.Oscillator.Abstractions</Description>
 	</PropertyGroup>
 	<ItemGroup>
-	  <PackageReference Include="Quartz" />
+		<PackageReference Include="Newtonsoft.Json" />
+		<PackageReference Include="Quartz" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Materal.Extensions\Materal.Extensions\Materal.Extensions.csproj" />
-	  <ProjectReference Include="..\..\Materal.Utils\Materal.Utils\Materal.Utils.csproj" />
+		<ProjectReference Include="..\..\Materal.Extensions\Materal.Extensions\Materal.Extensions.csproj" />
+		<ProjectReference Include="..\..\Materal.Utils\Materal.Utils\Materal.Utils.csproj" />
 	</ItemGroup>
 </Project>
